--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 
 [dependencies]
 chrono = "0.4.19"
+clap = "2.33.3"
 yahoo_finance_api = { version = "1.2.2", features = ["blocking"] }
