--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ name = "rust_stock_tracker_lib"
 path = "src/lib.rs"
 
 [[bin]]
-name = "rust_stock_tracker"
+name = "rust-stock-tracker"
 path = "src/main.rs"
 
 # [[bin]]
@@ -17,6 +17,8 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix = "0.12.0"
+actix-rt = "2.3.0"
 chrono = "0.4.19"
 clap = "2.33.3"
 tokio = {version = "1.12.0", features = ["full"]}
