--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,9 @@ chrono = "0.4.19"
 clap = "2.33.3"
 tokio = {version = "1.12.0", features = ["full"]}
 yahoo_finance_api = "1.2.2"
+
+# only for debugging the requests (`examples/fetch.rs`)
+# reqwest = { version = "0.11", features = ["json", "rustls"] }
+# serde_json = "1.0"
+# serde = { version = "1.0", features = ["derive"] }
+# async-compat = "0.2"
